@@ -1,21 +1,24 @@
 # Vertx-Async-Await
 
-Async-Await support for [Vertx](https://vertx.io/) using [Project Loom](https://wiki.openjdk.java.net/display/loom/Main).
+Async-Await support for [Vertx](https://vertx.io/) using [Project Loom](https://wiki.openjdk.java.net/display/loom/org.getshaka.vertx.loom.SequencingBugTests).
 
 ```java
-import static com.augustnagro.vaa.Async.async;
-import static com.augustnagro.vaa.Async.await;
+import static com.augustnagro.vertx.loom.VertxLoom.async;
+import static com.augustnagro.vertx.loom.VertxLoom.coroutine;
 
 Future<byte[]> buildPdf() {
   return async(() -> {
-    List<Long> userIds = await(userIdsFromDb());
-
-    List<String> userNames = userIds.stream()
-      .map(id -> await(userNameFromSomeApi(id)))
-      .toList();
-
-    byte[] pdf = await(buildPdf(userNames));
-    System.out.println("Generated pdf for user ids: " + userIds);
+    
+    List<Long> userIds = coroutine(userIdsFromDb());
+    
+    List<String> userNames = new ArrayList<>(userIds.size());
+    for (Long id : userIds) {
+      userNames.add(coroutine(userNameFromSomeApi(id)))
+    }
+    
+    byte[] pdf = coroutine(somePdfBuilder(userIds))
+  
+    System.out.println(userIds);
     return pdf;
   });
 }
@@ -54,35 +57,38 @@ Future<byte[]> buildPdf() {
 ```xml
 <dependency>
   <groupId>com.augustnagro</groupId>
-  <artifactId>vertx-async-await</artifactId>
-  <version>0.1.1</version>
+  <artifactId>vertx-loom</artifactId>
+  <version>0.2.0</version>
 </dependency>
 ```
 
-This library requires the latest [JDK 18 Loom Preview Build](http://jdk.java.net/loom/) and depends on `vertx-core` v. 4.1.5.
+This library requires a [JDK 18 Loom Preview Build](http://jdk.java.net/loom/) and depends on `vertx-core` v. 4.2.4.
+
+JDK 18 is used instead of the new 19 previews because no IDEs work with 19 yet.
+
+WARNING: this library uses class [Continuation](https://download.java.net/java/early_access/loom/docs/api/java.base/java/lang/Continuation.html), which has recently [been made private](https://mail.openjdk.java.net/pipermail/loom-dev/2021-October/002983.html) in the Loom OpenJDK fork. It is likely that `Continuation` will return later in some form, either with a restricted API or virtual thread schedulers. In newer preview builds, we will use `--add-exports` to get access.
 
 ## Docs:
 
-`async` executes some code with a Coroutine. Within the `async` scope, you can `await` Futures and program in an imperative style. Stack traces are also significantly improved in the case of errors.
+`async(Callable<A>)` returns `Future<A>`. Within the provided Callable, you can `await` Futures and program in an imperative style. Stack traces are also significantly improved in the case of errors.
 
-`async` can only be called on threads with a Vertx Context (this is always the case when using Verticles). No new platform threads are created; all execution is done on the thread that calls async(). This means you can program Verticles [without worrying about synchronization](https://vertx.io/docs/vertx-core/java/#_standard_verticles).
+The execution context remains on the current thread; no new threads, virtual or otherwise, are created by calling `async`.
 
-Finally, `async` and `await` calls can be nested to any depth.
+Finally, `async` and `await` calls can be nested to any depth although recursion is not stack-stafe.
 
 ## Why Async-Await?
 Vertx is great as-is.
 * It's [Wicked Fast](https://www.techempower.com/benchmarks/#section=data-r20&hw=ph&test=composite&l=zik0vz-sf)
 * Has great [docs](https://vertx.io/docs/vertx-core/java/#_in_the_beginning_there_was_vert_x)
-* There's a huge [ecosystem of libraries](https://vertx.io/docs/) under the official Vertx banner, from database connectors to network proxies.
-* Because the actor-like [Verticles](https://vertx.io/docs/vertx-core/java/#_verticles) always execute your program on the same event-loop thread, you can code as if you're writing a single-threaded application, despite using Futures!
+* There's a huge [ecosystem of libraries](https://vertx.io/docs/), from database connectors to network proxies
+* Actor-like [Verticles](https://vertx.io/docs/vertx-core/java/#_verticles) provide threading guarantees that make it safe to use Loom's Continuation class directly
 
 But there are some downsides too.
-* Often it's difficult to express something with the Future API, when it is trivial with simple blocking code.
-* Vertx Future is not stack-safe. Ie, it will StackOverflow if you recursively call flatMap.
+* Using Futures is harder to read & maintain than simple blocking code.
 * It's hard to debug big Future chains in IDEs
-* Stack traces are meaningless if the Exception is thrown in a different thread than your Vertx Context. For example, when `pgClient.prepareQuery("SELEC * FROM my_table").execute()` fails, any logged stacktrace won't show you where this code is. This is because the postgress client maintains its own pool of threads.
+* Stack traces are poor, especially if the Exception is thrown on a different thread than your current Vertx Context. For example, when `pgClient.prepareQuery("SELEC * FROM my_table").execute()` fails, any logged stacktrace won't show you where this code is. This is because the postgres client maintains its own pool of threads.
 
-Project Loom solves all four issues. (Debugging support is not working yet in IDEs for the current JDK Preview).
+Project Loom solves all three issues. The goal of this project is to combine the performance of Vertx's event loop with the productivity of Loom's synchronous programming model.
 
 ## Implementation Details
 
@@ -90,9 +96,8 @@ My first stab at this problem using Virtual Threads failed. I forked [vertx-gen]
 
 This API was beautiful and exactly how Virtual Threads should be used; spawn one for every request and don't worry about blocking them. The big problem is that there's no way to actually block Vert'x Future, which is an interface with unbounded implementations. For this prototype I converted the Future to a Java CompletableFuture, which can be joined: `myFuture.toCompletionStage().toCompletableFuture().join()`. This turns out to be really, really, not good (it essentially spawns another thread that loops until the Future reports completion).
 
-Months later, I saw this Scala [monadic-reflection](https://github.com/lampepfl/monadic-reflection) library using Loom's low-level Continuation api. Inspired, I implemented a vertx-specialized Coroutine that can be suspended and resumed, which is enough to implement `async` and `await`.
+Months later, I saw this Scala [monadic-reflection](https://github.com/lampepfl/monadic-reflection) library using Loom's low-level Continuation api. Inspired, I implemented a vertx-specialized Coroutine that can be suspended and resumed, which is enough to implement `async` and `coroutine`.
 
-After sharing to the vertx-dev and loom-dev mailing lists, I learned that the Continuation API turned out to be unsafe and was made jdk-private. After playing with Virtual Threads, I found that the Coroutine I had made could be re-implemented with a Virtual Thread and simple Reentrant Lock. For the execution to remain on the correct Vertx Thread, I set the Executor to use Context::runOnContext instead of the default ForkJoinPool. Finally, ThreadLocals are used to keep track of the Coroutine and Vertx Context; in the future these can be replaced by ScopeLocals when their JEP is approved.
 
-## See Also
-The same library, but for the JDK's CompletionStage: https://github.com/AugustNagro/java-async-await
+# Testing Notes:
+* the `io.vertx.ext.unit.junit.RunTestOnContext` JUnit 4 rule is not working with this. See the simple implementation of `asyncTest` in this project.
